--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment_8 - DevFolio Bootstrap Portfolio</title>
+    <title>Exam 1 - Bootstrap Daniels Portfolio</title>
 
     <!-- Shortcut icon -->
     <link rel="shortcut icon" href="./images/favicon.ico" />
@@ -1297,18 +1297,20 @@
                 <div class="row g-3">
                   <div class="col-12 col-lg-6">
                     <input
-                      type="email"
+                      type="text"
                       class="form-control p-2 px-3 rounded-2 border-0"
                       id="validationDefault01"
+                      name="name"
                       placeholder="Name"
                       required
                     />
                   </div>
                   <div class="col-12 col-lg-6">
                     <input
-                      type="text"
+                      type="email"
                       class="form-control p-2 px-3 rounded-2 border-0"
                       id="validationDefault01"
+                      name="email"
                       placeholder="Email"
                       required
                     />
@@ -1317,6 +1319,7 @@
                     <textarea
                       class="form-control p-2 px-3 rounded-2 border-0"
                       id="validationTextarea"
+                      name="message"
                       placeholder="Message"
                       required
                     ></textarea>
